--- a/src/app/stock/components/stock-portfolio-view/stock-portfolio-view.component.html
+++ b/src/app/stock/components/stock-portfolio-view/stock-portfolio-view.component.html
@@ -1,13 +1,14 @@
-<div>
-    <highcharts-chart
+<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6">
+  <highcharts-chart
     [Highcharts]="Highcharts"
     [options]="chartOptions"
-    style="width:100%; height: 250px; display:block"
-></highcharts-chart>
-
-<highcharts-chart
-[Highcharts]="Highcharts"
-[options]="currentChartOptions"
-style="width:100%; height: 250px; display:block"
-></highcharts-chart>
+    style="width: 100%; height: 250px; display: block"
+  ></highcharts-chart>
+</div>
+<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6">
+  <highcharts-chart
+    [Highcharts]="Highcharts"
+    [options]="currentChartOptions"
+    style="width: 100%; height: 250px; display: block"
+  ></highcharts-chart>
 </div>
