--- a/src/app/stock/components/stock-list/stock-list.component.html
+++ b/src/app/stock/components/stock-list/stock-list.component.html
@@ -81,7 +81,7 @@
                 stockForm.controls["numberOfContracts"].touched)
             ) {
               <small class="text-danger">
-                This is a required field. Please add symbol.
+                This is a required field. Please add contracts.
               </small>
             }
           </div>
@@ -107,7 +107,7 @@
                 stockForm.controls["buyValue"].touched)
             ) {
               <small class="text-danger">
-                This is a required field. Please add symbol.
+                This is a required field. Please add Buy Price.
               </small>
             }
           </div>
