--- a/src/app/stock/components/stock-portfolio-view/stock-portfolio-view.component.html
+++ b/src/app/stock/components/stock-portfolio-view/stock-portfolio-view.component.html
@@ -1,10 +1,13 @@
 <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6">
+  <!-- Portfolio element values view for boughtValues w.r.t name of the stock -->
   <highcharts-chart
     [Highcharts]="Highcharts"
     [options]="chartOptions"
     style="width: 100%; height: 250px; display: block"
   ></highcharts-chart>
 </div>
+
+<!-- Portfolio element values view for currentValues w.r.t name of the stock -->
 <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6">
   <highcharts-chart
     [Highcharts]="Highcharts"
