--- a/src/app/stock/stock.component.html
+++ b/src/app/stock/stock.component.html
@@ -2,6 +2,6 @@
   <div class="row">
     <h3>Stock Portfolio</h3>
   </div>
-
+  <!-- Loads the stock list component -->
   <app-stock-list></app-stock-list>
 </div>
